--- a/index.html
+++ b/index.html
@@ -2,16 +2,30 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Coral-project by DWang5090</title>
+    <title>Coral-project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" media="screen" href="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.css" />
+    <style type="text/css">
+        a.fancybox img {
+            border: none;
+            box-shadow: 0 1px 7px rgba(0,0,0,0.6);
+            -o-transform: scale(1,1); -ms-transform: scale(1,1); -moz-transform: scale(1,1); -webkit-transform: scale(1,1); transform: scale(1,1); -o-transition: all 0.2s ease-in-out; -ms-transition: all 0.2s ease-in-out; -moz-transition: all 0.2s ease-in-out; -webkit-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out;
+        } 
+        a.fancybox:hover img {
+            position: relative; z-index: 999; -o-transform: scale(1.03,1.03); -ms-transform: scale(1.03,1.03); -moz-transform: scale(1.03,1.03); -webkit-transform: scale(1.03,1.03); transform: scale(1.03,1.03);
+        }
+        img{
+           padding:10px;
+        }
+    </style>
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Coral-project</h1>
+      <h1 class="project-name">Coral Project Blog</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/DWang5090/Coral-Project" class="btn">View on GitHub</a>
       <a href="https://github.com/DWang5090/Coral-Project/zipball/master" class="btn">Download .zip</a>
@@ -20,30 +34,20 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>February 29 - March 6</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>We did some sketches on what our visualization would look like. Our visualization would essentially be a top down view of the coral reef structure which would generate a 3D terrain of that structure and the user can orbit, look around, look into the model of the structure and select different areas that will then show more information about that particular area. Here are some pictures of some sketches we did before our final conclusion of the visualization.
+</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<img class="fancybox" src="Slack for iOS Upload.jpg" alt= "island view visualization" style="width:340px;height:240px" data-big="Slack for iOS Upload.jpg">
+<img class="fancybox" src="Slack for iOS Upload (1).jpg" alt= "island view visualization" style="width:340px;height:240px" data-big="Slack for iOS Upload (1).jpg">
+<img class="fancybox" src="coral top down.png" alt= "island view visualization" style="width:340px;height:240px" data-big="coral top down.png">
+<img class="fancybox" src="perspective coral view.png" alt= "island view visualization" style="width:340px;height:240px" data-big="perspective coral view.png">
+<img class="fancybox" src="pop up.png" alt= "island view visualization" style="width:340px;height:240px" data-big="pop up.png">
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-
+<p> Here is also a top down view of some coral that we will test to create our terrain. </p>
+<img class="fancybox" src="Screen Shot 2016-03-05 at 8.52.54 AM.png" alt= "island view visualization" style="width:340px;height:240px" data-big="Screen Shot 2016-03-05 at 8.52.54 AM.png">
+     
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/DWang5090/Coral-Project">Coral-project</a> is maintained by <a href="https://github.com/DWang5090">DWang5090</a>.</span>
 
@@ -54,4 +58,27 @@
 
   
   </body>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.pack.min.js"></script>
+  <script type="text/javascript">
+      $(function($){
+          var addToAll = false;
+          var gallery = true;
+          var titlePosition = 'inside';
+          $(addToAll ? 'img' : 'img.fancybox').each(function(){
+              var $this = $(this);
+              var title = $this.attr('title');
+              var src = $this.attr('data-big') || $this.attr('src');
+              var a = $('<a href="#" class="fancybox"></a>').attr('href', src).attr('title', title);
+              $this.wrap(a);
+          });
+          if (gallery)
+              $('a.fancybox').attr('rel', 'fancyboxgallery');
+          $('a.fancybox').fancybox({
+              titlePosition: titlePosition
+          });
+      });
+      $.noConflict();
+  </script>
 </html>
