--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 <p>We did some sketches on what our visualization would look like. Our visualization would essentially be a top down view of the coral reef structure which would generate a 3D terrain of that structure and the user can orbit, look around, look into the model of the structure and select different areas that will then show more information about that particular area. Here are some pictures of some sketches we did before our final conclusion of the visualization.
 </p>
 
-<img class="fancybox" src="Slack for iOS Upload.jpg" alt= "island view visualization" style="width:340px;height:240px" data-big="Slack for iOS Upload.jpg">
-<img class="fancybox" src="Slack for iOS Upload (1).jpg" alt= "island view visualization" style="width:340px;height:240px" data-big="Slack for iOS Upload (1).jpg">
+<img class="fancybox" src="island coral.jpg" alt= "island view visualization" style="width:340px;height:240px" data-big="Slack for iOS Upload.jpg">
+<img class="fancybox" src="coral pop up.jpg" alt= "island view visualization" style="width:340px;height:240px" data-big="Slack for iOS Upload (1).jpg">
 <img class="fancybox" src="coral top down.png" alt= "island view visualization" style="width:340px;height:240px" data-big="coral top down.png">
 <img class="fancybox" src="perspective coral view.png" alt= "island view visualization" style="width:340px;height:240px" data-big="perspective coral view.png">
 <img class="fancybox" src="pop up.png" alt= "island view visualization" style="width:340px;height:240px" data-big="pop up.png">
 
 <p> Here is also a top down view of some coral that we will test to create our terrain. </p>
-<img class="fancybox" src="Screen Shot 2016-03-05 at 8.52.54 AM.png" alt= "island view visualization" style="width:340px;height:240px" data-big="Screen Shot 2016-03-05 at 8.52.54 AM.png">
+<img class="fancybox" src="coral texture top down.png" alt= "island view visualization" style="width:340px;height:240px" data-big="coral texture top down.png">
      
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/DWang5090/Coral-Project">Coral-project</a> is maintained by <a href="https://github.com/DWang5090">DWang5090</a>.</span>
