--- a/index.html
+++ b/index.html
@@ -47,7 +47,17 @@
 
 <p> Here is also a top down view of some coral that we will test to create our terrain. </p>
 <img class="fancybox" src="coral texture top down.png" alt= "island view visualization" style="width:340px;height:240px" data-big="coral texture top down.png">
-     
+
+      <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>March 7 - March 13</h3>
+
+<p> Here is a video of the terrain that we generated from the top down coral picture </p>
+<video width="320" height="240" controls>
+   <source src="Coral_Unity.webm" type="video/webm">
+   <source src="Coral_Unity.mp4" type="video/mp4">
+   <source src="Coral_Unity.ogg" type="video/ogg">
+   <p>This is fallback content to display for user agents that do not support the video tag.</p>
+   </video>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/DWang5090/Coral-Project">Coral-project</a> is maintained by <a href="https://github.com/DWang5090">DWang5090</a>.</span>
 
